Updated font and added sound on number press

--- a/RetroCalculator/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/RetroCalculator/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Minecraft.ttf">
+            <string>Minecraft</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -58,6 +63,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="tSP-A9-qaA"/>
                                                 </constraints>
                                                 <state key="normal" image="7"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rxD-eB-pJo"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcF-Se-qK1">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
@@ -66,6 +74,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="k2S-93-PK1"/>
                                                 </constraints>
                                                 <state key="normal" image="8"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qoI-76-CQw"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P4A-fW-j8c">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
@@ -74,6 +85,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="sKK-TV-Sly"/>
                                                 </constraints>
                                                 <state key="normal" image="9"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mX7-tg-Ex9"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -87,6 +101,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="ppg-1V-kaC"/>
                                                 </constraints>
                                                 <state key="normal" image="4"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vt0-Wy-xUS"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MAl-uj-Juj">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
@@ -95,6 +112,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="wQf-BZ-IOc"/>
                                                 </constraints>
                                                 <state key="normal" image="5"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xae-So-Bjq"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pt7-mZ-Yjq">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
@@ -103,6 +123,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="uY4-fG-Q1R"/>
                                                 </constraints>
                                                 <state key="normal" image="6"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hUW-sh-tNM"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -116,6 +139,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="jWg-5t-p0J"/>
                                                 </constraints>
                                                 <state key="normal" image="1"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oeK-RR-Ye6"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRY-ib-OQ6">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
@@ -124,6 +150,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="bLS-ys-2hE"/>
                                                 </constraints>
                                                 <state key="normal" image="2"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x68-WI-xmi"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bp5-pj-OYl">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
@@ -132,6 +161,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="Her-YQ-U9D"/>
                                                 </constraints>
                                                 <state key="normal" image="3"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iM4-qh-TcX"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -145,6 +177,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="k0r-Gd-LSX"/>
                                                 </constraints>
                                                 <state key="normal" image="0"/>
+                                                <connections>
+                                                    <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oq7-p3-4AW"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VMk-oQ-duU">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
@@ -200,7 +235,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="e9l-gn-vZf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <fontDescription key="fontDescription" name="Minecraft" family="Minecraft" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
