--- a/RetroCalculator/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/RetroCalculator/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="cqF-Qx-Ah1">
                                         <rect key="frame" x="0.0" y="0.0" width="195" height="51"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wnd-rZ-XGb">
+                                            <button opaque="NO" tag="7" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wnd-rZ-XGb">
                                                 <rect key="frame" x="0.0" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="53" id="kI3-jT-tEH"/>
@@ -67,7 +67,7 @@
                                                     <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rxD-eB-pJo"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcF-Se-qK1">
+                                            <button opaque="NO" tag="8" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcF-Se-qK1">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="53" id="a04-UJ-sGF"/>
@@ -78,7 +78,7 @@
                                                     <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qoI-76-CQw"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P4A-fW-j8c">
+                                            <button opaque="NO" tag="9" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P4A-fW-j8c">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="51" id="fl1-qn-r8S"/>
@@ -94,7 +94,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="zr9-h9-c9p">
                                         <rect key="frame" x="0.0" y="59" width="195" height="51"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBf-Fm-PcB">
+                                            <button opaque="NO" tag="4" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBf-Fm-PcB">
                                                 <rect key="frame" x="0.0" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="51" id="Ehd-5r-Mft"/>
@@ -105,7 +105,7 @@
                                                     <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vt0-Wy-xUS"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MAl-uj-Juj">
+                                            <button opaque="NO" tag="5" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MAl-uj-Juj">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="53" id="gNa-sk-SGm"/>
@@ -116,7 +116,7 @@
                                                     <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xae-So-Bjq"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pt7-mZ-Yjq">
+                                            <button opaque="NO" tag="6" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pt7-mZ-Yjq">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="53" id="Tns-up-8C4"/>
@@ -132,7 +132,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="PGl-aU-RbC">
                                         <rect key="frame" x="0.0" y="118" width="195" height="51"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vxh-Kk-MS4">
+                                            <button opaque="NO" tag="1" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vxh-Kk-MS4">
                                                 <rect key="frame" x="0.0" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="53" id="006-Fh-NET"/>
@@ -143,7 +143,7 @@
                                                     <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oeK-RR-Ye6"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRY-ib-OQ6">
+                                            <button opaque="NO" tag="2" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRY-ib-OQ6">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="53" id="Jth-r5-Evy"/>
@@ -154,7 +154,7 @@
                                                     <action selector="numberPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x68-WI-xmi"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bp5-pj-OYl">
+                                            <button opaque="NO" tag="3" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bp5-pj-OYl">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="51" id="0zC-ef-fgz"/>
@@ -188,6 +188,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="SJV-oU-tGR"/>
                                                 </constraints>
                                                 <state key="normal" image="divide"/>
+                                                <connections>
+                                                    <action selector="onDividePressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VYo-Vw-q0c"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nf-QP-9ap">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
@@ -196,6 +199,9 @@
                                                     <constraint firstAttribute="height" constant="51" id="lQF-cH-eIW"/>
                                                 </constraints>
                                                 <state key="normal" image="multiply"/>
+                                                <connections>
+                                                    <action selector="onMultiplyPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pIP-jx-fzp"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -209,6 +215,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="xtl-WI-1d1"/>
                                                 </constraints>
                                                 <state key="normal" image="subtract"/>
+                                                <connections>
+                                                    <action selector="onSubtractPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R9F-hN-oqL"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8CZ-sn-yVf">
                                                 <rect key="frame" x="71" y="0.0" width="53" height="51"/>
@@ -217,6 +226,9 @@
                                                     <constraint firstAttribute="width" constant="53" id="ObZ-EX-b1P"/>
                                                 </constraints>
                                                 <state key="normal" image="add"/>
+                                                <connections>
+                                                    <action selector="onAddPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5fn-ch-z4L"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AOC-GP-vEz">
                                                 <rect key="frame" x="142" y="0.0" width="53" height="51"/>
@@ -225,12 +237,15 @@
                                                     <constraint firstAttribute="width" constant="53" id="eRf-q2-qQR"/>
                                                 </constraints>
                                                 <state key="normal" image="equal"/>
+                                                <connections>
+                                                    <action selector="onEqualPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nbp-nr-Jpz"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6SE-0Q-BRM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6SE-0Q-BRM">
                                 <rect key="frame" x="40.5" y="39" width="239" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="e9l-gn-vZf"/>
@@ -262,6 +277,9 @@
                             <constraint firstItem="PtE-mC-dN1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="syn-5g-K6n"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="outputLbl" destination="6SE-0Q-BRM" id="hq3-xg-XRn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
